--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -19,7 +19,8 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
-          <th scope='col'>Delete?</th>
+          <th scope='col'>Edit</th>
+          <th scope='col'>Delete</th>
         </tr>
       </thead>
       <tbody>
@@ -27,6 +28,7 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td><form method='GET' action=<%=`/urls/${url}`%>><button type="submit" class="btn btn-primary">Edit</button></form></td>
             <td><form method='POST' action=<%=`/urls/${url}/delete`%>><button type="submit" class="btn btn-danger">Delete</button></form></td>
           </tr>
         <% } %>
