--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -26,8 +26,8 @@
       <tbody>
         <% for(let url in urls) { %>
           <tr>
-            <td><%= url %></td>
-            <td><%= urls[url] %></td>
+            <td><a href='http://localhost:8080/u/<%= url %>'>http://localhost/u/<%= url %></a></td>
+            <td><a href='<%= urls[url] %>'><%= urls[url] %></a></td>
             <td><form method='GET' action=<%=`/urls/${url}`%>><button type="submit" class="btn btn-primary">Edit</button></form></td>
             <td><form method='POST' action=<%=`/urls/${url}/delete`%>><button type="submit" class="btn btn-danger">Delete</button></form></td>
           </tr>
