--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -28,8 +28,8 @@
           <tr>
             <td><a href='http://localhost:8080/u/<%= url %>'>http://localhost/u/<%= url %></a></td>
             <td><a href='<%= urls[url] %>'><%= urls[url] %></a></td>
-            <td><form method='GET' action=<%=`/urls/${url}`%>><button type="submit" class="btn btn-primary">Edit</button></form></td>
-            <td><form method='POST' action=<%=`/urls/${url}/delete`%>><button type="submit" class="btn btn-danger">Delete</button></form></td>
+            <td><form method='GET' action=<%=`/urls/${url}`%>><button type="submit" class="btn btn-outline-primary">Edit</button></form></td>
+            <td><form method='POST' action=<%=`/urls/${url}/delete`%>><button type="submit" class="btn btn-outline-danger">Delete</button></form></td>
           </tr>
         <% } %>
       </tbody>
