changed form to horizontal layout

--- a/views/usr_new.ejs
+++ b/views/usr_new.ejs
@@ -13,7 +13,7 @@
 
 <main style="margin: 1em;">
   <h3>Create TinyURL User</h3>
-  <form class="form-inline" action="/register" method="POST">
+  <form class="form-horizontal" action="/register" method="POST">
     <div class="form-group mb-2">
       <label for="email">Enter user email address:</label>
       <input class="form-control" type="email" name="email" style="width: 300px; margin: 1em">
