Associated URLs with users and modified routes for new db structure

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -27,7 +27,7 @@
         <% for(let url in urls) { %>
           <tr>
             <td><a href='http://localhost:8080/u/<%= url %>'>http://localhost/u/<%= url %></a></td>
-            <td><a href='<%= urls[url] %>'><%= urls[url] %></a></td>
+            <td><a href='<%= urls[url].longURL %>'><%= urls[url].longURL %></a></td>
             <td><form method='GET' action=<%=`/urls/${url}`%>><button type="submit" class="btn btn-outline-primary">Edit</button></form></td>
             <td><form method='POST' action=<%=`/urls/${url}/delete`%>><button type="submit" class="btn btn-outline-danger">Delete</button></form></td>
           </tr>
