--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -26,7 +26,7 @@
       <tbody>
         <% for(let url in urls) { %>
           <tr>
-            <td><a href='http://localhost:8080/u/<%= url %>'>http://localhost/u/<%= url %></a></td>
+            <td><a href='/u/<%= url %>'><%= url %></a></td>
             <td><a href='<%= urls[url] %>'><%= urls[url] %></a></td>
             <td><form method='GET' action=<%=`/urls/${url}`%>><button type="submit" class="btn btn-outline-primary">Edit</button></form></td>
             <td><form method='POST' action=<%=`/urls/${url}/delete`%>><button type="submit" class="btn btn-outline-danger">Delete</button></form></td>
