--- a/views/error.ejs
+++ b/views/error.ejs
@@ -6,27 +6,15 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
-  <title>New User - TinyApp</title>
+  <title>Error - TinyApp</title>
 </head>
 <body>
 <%- include('partials/_header') %>
 
 <main style="margin: 1em;">
   <% if(locals.errorMsg) { %>
-    <h4 style='color: red;'><%= locals.errorMsg %></h4>
-  <% } %> 
-
-  <h3>Create TinyURL User</h3>
-  <form class="form-horizontal" action="/register" method="POST">
-    <div class="form-group mb-2">
-      <label for="email">Enter user email address:</label>
-      <input class="form-control" type="email" name="email" style="width: 300px; margin: 1em">
-      <label for="password">Enter password:</label>
-      <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
-
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </div>
-  </form>
+    <h4 style='color: red; text-align: center;'><%= locals.errorMsg %></h4>
+  <% }  %> 
 </main>
 
   <!-- Bootstrap JS -->
