--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -21,7 +21,7 @@
       <form class="form-inline" action="/urls/<%= shortURL %>" method="POST">
         <div class="form-group" style="width: 50%; margin: 0 auto">
           <label for="longURL">New URL:</label>
-          <input class="form-control" type="text" name="longURL" value="<%= longURL %>" style="width: 300px; margin: 1em">
+          <input class="form-control" type="url" name="longURL" value="<%= longURL %>" style="width: 300px; margin: 1em">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
