--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-success">
+  <nav class="navbar navbar-expand-md navbar-dark bg-success" style='background-color: #2861a7!important;'>
     <a class="navbar-brand" href="/urls">TinyApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -14,7 +14,7 @@
       <form class="form-inline" action='/logout' method='POST'>
         <p class='navbar-text nav-link' style='margin-bottom: 0;'>Welcome <%= user.email %>!</p>
         <div class='form-group'>
-          <button type='submit' class="btn btn-outline">Log Out</button>
+          <button type='submit' class="btn btn-outline" style='color: rgba(255,255,255,.5)'>Log Out</button>
         </div>
       </form>
     <% } else { %>
