--- a/views/usr_login.ejs
+++ b/views/usr_login.ejs
@@ -12,24 +12,30 @@
 <%- include('partials/_header') %>
 
 <main style="margin: 1em;">
-  <% if(locals.loginError) { %>
-    <h4 style='color: red;'>You need to be logged in to perform that action.</h4>
-  <% } %> 
-  <% if(locals.errorMsg) { %>
-    <h4 style='color: red;'><%= locals.errorMsg %></h4>
-  <% } %> 
-
-  <h3>Login User</h3>
-  <form class="form-horizontal" action='/login' method='POST'>
-    <div class="form-group mb-2">
-      <label for="email">Enter email address:</label>
-      <input class="form-control" type="email" name="email" style="width: 300px; margin: 1em">
-      <label for="password">Enter password:</label>
-      <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
-
-      <button type="submit" class="btn btn-primary">Submit</button>
+  <div class="card text-center">
+    <div class="card-body">
+      <% if(locals.loginError) { %>
+        <h5 style='color: red;'>You need to be logged in to perform that action.</h5>
+      <% } %> 
+      <% if(locals.errorMsg) { %>
+        <h5 style='color: red;'><%= locals.errorMsg %></h5>
+      <% } %> 
+    
+      <h4>Login User</h4>
     </div>
-  </form>
+    <div class="card-footer text-muted">
+      <form class="form-inline" action='/login' method='POST'>
+        <div class="form-group mb-2" style="width: 50%; margin: 0 auto">
+          <label for="email">Enter email address:</label>
+          <input class="form-control" type="email" name="email" style="width: 300px; margin: 1em">
+          <label for="password">Enter password:</label>
+          <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
+    
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+      </form>
+    </div>
+  </div>
 </main>
 
   <!-- Bootstrap JS -->
