--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -21,10 +21,10 @@
 
         </div>
         <div class="card-footer text-muted">
-          <form class="form-inline" action="/urls" method="POST">
+          <form class="form-horizontal" action="/urls" method="POST">
             <div class="form-group mb-2" style="width: 50%; margin: 0 auto">
               <label for="longURL">Enter a URL:</label>
-              <input class="form-control" type="url" name="longURL" value="http://" style="width: 300px; margin: 1em">
+              <input class="form-control" type="url" name="longURL" value="http://" style="width: 300px; margin: auto">
               <button type="submit" class="btn btn-primary">Submit</button>
             </div>
           </form>
