--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -18,10 +18,10 @@
       </div>
     <div class="card-footer text-muted">
       <h3>Edit URL:</h3>
-      <form class="form-inline" action="/urls/<%= shortURL %>?_method=PUT" method="POST">
+      <form class="form-horizontal" action="/urls/<%= shortURL %>?_method=PUT" method="POST">
         <div class="form-group" style="width: 50%; margin: 0 auto">
           <label for="longURL">New URL:</label>
-          <input class="form-control" type="url" name="longURL" value="<%= longURL %>" style="width: 300px; margin: 1em">
+          <input class="form-control" type="url" name="longURL" value="<%= longURL %>" style="width: 300px; margin: auto">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
