--- a/views/usr_login.ejs
+++ b/views/usr_login.ejs
@@ -24,12 +24,13 @@
       <h4>Login User</h4>
     </div>
     <div class="card-footer text-muted">
-      <form class="form-inline" action='/login' method='POST'>
-        <div class="form-group mb-2" style="width: 50%; margin: 0 auto">
+
+      <form class="form-horizontal" action='/login' method='POST' style="width: 50%; margin: auto">
+        <div class="form-group mb-2" >
           <label for="email">Enter email address:</label>
-          <input class="form-control" type="email" name="email" style="width: 300px; margin: 1em">
+          <input class="form-control" type="email" name="email" style="width: 300px; margin: auto">
           <label for="password">Enter password:</label>
-          <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
+          <input class="form-control" type="password" name="password" style="width: 300px; margin: auto">
     
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
