--- a/views/usr_new.ejs
+++ b/views/usr_new.ejs
@@ -21,12 +21,12 @@
       <h4>Create TinyURL User</h4>
     </div>
     <div class="card-footer text-muted">
-      <form class="form-inline" action="/register" method="POST">
-        <div class="form-group mb-2" style="width: 50%; margin: 0 auto">
+      <form class="form-horizontal" action="/register" method="POST" style="width: 50%; margin: auto">
+        <div class="form-group mb-2">
           <label for="email">Enter email address:</label>
-          <input class="form-control" type="email" name="email" style="width: 300px; margin: 1em">
+          <input class="form-control" type="email" name="email" style="width: 300px; margin: auto">
           <label for="password">Enter password:</label>
-          <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
+          <input class="form-control" type="password" name="password" style="width: 300px; margin: auto">
     
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
